# Mech-Angel

./: README.md
Server/GameServer/: CMakeLists.txt  GameServer.ncb  GameServer.sln  GameServerVC120.sln  GameServer_v100.sln  build_gameserver.bat  doneHandler.py  vs05to10.bat  vs10to05.bat
Server/GameServer/GameServer/: GameServer.vcproj  GameServer.vcxproj  GameServer.vcxproj.filters  GameServerVC120.vcxproj  GameServerVC120.vcxproj.filters  ReadMe.txt
Server/GameServer/Src/: ExportRobot.cpp  ExportRobot.h  GameServerApp.cpp  GameServerApp.h  GameServerManager.cpp  GameServerManager.h  Main.cpp  PATCH_BASE_5263.patch
Server/GameServer/Src/Activity/: ACT_ActivityAsset.cpp  ACT_ActivityAsset.h  ACT_ActivityDataManager.cpp  ACT_ActivityDataManager.h  ACT_ActivitySchedule.cpp  ACT_ActivitySchedule.h  ACT_ChargeInterval.cpp  ACT_ChargeInterval.h  ACT_ChargeProfit.cpp  ACT_ChargeProfit.h  ACT_ChargeRebates.cpp  ACT_ChargeRebates.h  ACT_ClimbTower.cpp  ACT_ClimbTower.h  ACT_ConsumeProfit.cpp  ACT_ConsumeProfit.h  ACT_ConsumeRebates.cpp  ACT_ConsumeRebates.h  ACT_ContinuousCharge.cpp  ACT_ContinuousCharge.h  ACT_Login.cpp  ACT_Login.h  ACT_Lottery.cpp  ACT_Lottery.h  ACT_Monopoly.cpp  ACT_Monopoly.h  ACT_OfferAReward.cpp  ACT_OfferAReward.h  ACT_PicturePuzzle.cpp  ACT_PicturePuzzle.h  ACT_RefreshShop.cpp  ACT_RefreshShop.h  ACT_SecretTreasure.cpp  ACT_SecretTreasure.h  ACT_Shop.cpp  ACT_Shop.h  ACT_ShopB.cpp  ACT_Shot.cpp  ACT_Shot.h  ACT_SignIn.cpp  (+23 more)
Server/GameServer/Src/Arena/: LC_Arena_Manager.cpp  LC_Arena_Manager.h  LC_Dule_Config.cpp  LC_Dule_Config.h  LC_Dule_Manager.cpp  LC_Dule_Manager.h
Server/GameServer/Src/AsyHttpClient/: AH_AsyHttpClient.cpp  AH_AsyHttpClient.h  LC_ThirdPlatformReport.cpp  LC_ThirdPlatformReport.h
Server/GameServer/Src/Bot/: BotInstance.cpp  BotInstance.h  BotInstanceMgr.cpp  BotInstanceMgr.h
Server/GameServer/Src/Buddy/: BuddyAttrManager.cpp  BuddyAttrManager.h  BuddyCardData.h  BuddyChain.cpp  BuddyChain.h  BuddyHelper.cpp  BuddyHelper.h  BuddyInstance.cpp  BuddyInstance.h  BuddyInstanceData.h  BuddyInstanceData_ActorBase.h  BuddyInstanceData_Attacker.h  BuddyInstanceData_PlayerBase.h  BuddyInstanceData_ServerPlayer.h  BuddyInstanceMgr.cpp  BuddyInstanceMgr.h  BuddyScheme.cpp  BuddyScheme.h
Server/GameServer/Src/CSV/: CF_ServerCSVManager.cpp  CF_ServerCSVManager.h  CSV_Server_Helper.cpp  CSV_Server_Helper.h  ConfigManager.cpp  ConfigManager.h
Server/GameServer/Src/DailyDataReport/: LC_DailyDataReport.cpp  LC_DailyDataReport.h
Server/GameServer/Src/EntrustTask/: EntrustTask.cpp  EntrustTask.h  EntrustTaskConfigManager.cpp  EntrustTaskConfigManager.h
Server/GameServer/Src/FacebookReward/: LC_FacebookReward.cpp  LC_FacebookReward.h
Server/GameServer/Src/GameStory/: LC_GameStoryBase.cpp  LC_GameStoryBase.h  LC_GameStoryCommon.h  LC_GameStory_Escort.cpp  LC_GameStory_Escort.h  LC_GameStory_FactionWar.cpp  LC_GameStory_FactionWar.h  LC_GameStory_GuildLadderWar.cpp  LC_GameStory_GuildLadderWar.h  LC_GameStory_Manager.cpp  LC_GameStory_Manager.h  LC_GameStory_Transcript.cpp  LC_GameStory_Transcript.h  LC_GameStory_WildBoss.cpp  LC_GameStory_WildBoss.h  LC_StoryLogic_Manager.cpp  LC_StoryLogic_Manager.h
Server/GameServer/Src/Handler/: HL_FromChatServer.cpp  HL_FromClient_AcitivityProtocol.cpp  HL_FromClient_AllianceProtocol.cpp  HL_FromClient_ArenaProtocol.cpp  HL_FromClient_AssistProtocol.cpp  HL_FromClient_AuctionProtocol.cpp  HL_FromClient_BotProtocol.cpp  HL_FromClient_BuddyProtocol.cpp  HL_FromClient_ChatProtocol.cpp  HL_FromClient_CurrencyTradeProtocol.cpp  HL_FromClient_DebugProtocol.cpp  HL_FromClient_DuelProtocol.cpp  HL_FromClient_ForbidProtocol.cpp  HL_FromClient_FriendProtocol.cpp  HL_FromClient_GameProtocol.cpp  HL_FromClient_GatewayProtocol.cpp  HL_FromClient_GroupProtocol.cpp  HL_FromClient_GuildProtocol.cpp  HL_FromClient_ItemProtocol.cpp  HL_FromClient_LoginProtocol.cpp  HL_FromClient_MailProtocol.cpp  HL_FromClient_NPCShopProtocol.cpp  HL_FromClient_PKProtocol.cpp  HL_FromClient_PetProtocol.cpp  HL_FromClient_PlaceHolderProtocol.cpp  (+24 more)
(+742 files in other folders)
